// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/View default 1`] = `
<div
  class="css-view-g5y9jx"
/>
`;

exports[`components/View non-text is rendered 1`] = `
<div
  class="css-view-g5y9jx"
>
  <div
    class="css-view-g5y9jx"
    data-testid="1"
  />
</div>
`;

exports[`components/View prop "aria-label" value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-view-g5y9jx"
/>
`;

exports[`components/View prop "aria-labelledby" value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-view-g5y9jx"
/>
`;

exports[`components/View prop "aria-live" value is set 1`] = `
<div
  aria-live="polite"
  class="css-view-g5y9jx"
/>
`;

exports[`components/View prop "dir" value is "ltr" 1`] = `
<div
  class="css-view-g5y9jx"
  dir="ltr"
/>
`;

exports[`components/View prop "dir" value is "rtl" 1`] = `
<div
  class="css-view-g5y9jx"
  dir="rtl"
/>
`;

exports[`components/View prop "href" href with accessibilityRole 1`] = `
<a
  class="css-view-g5y9jx"
  href="https://example.com"
  role="presentation"
/>
`;

exports[`components/View prop "href" value is set 1`] = `
<a
  class="css-view-g5y9jx"
  href="https://example.com"
/>
`;

exports[`components/View prop "hrefAttrs" null values are excluded 1`] = `
<a
  class="css-view-g5y9jx"
  href="https://example.com"
/>
`;

exports[`components/View prop "hrefAttrs" requires "href" 1`] = `
<div
  class="css-view-g5y9jx"
/>
`;

exports[`components/View prop "hrefAttrs" target variant is set 1`] = `
<a
  class="css-view-g5y9jx"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`components/View prop "hrefAttrs" value is set 1`] = `
<a
  class="css-view-g5y9jx"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
/>
`;

exports[`components/View prop "lang" ar 1`] = `
<div
  class="css-view-g5y9jx"
  dir="rtl"
  lang="ar"
/>
`;

exports[`components/View prop "lang" fr 1`] = `
<div
  class="css-view-g5y9jx"
  dir="ltr"
  lang="fr"
/>
`;

exports[`components/View prop "lang" undefined 1`] = `
<div
  class="css-view-g5y9jx"
/>
`;

exports[`components/View prop "lang" with dir 1`] = `
<div
  class="css-view-g5y9jx"
  dir="ltr"
  lang="ar"
/>
`;

exports[`components/View prop "nativeID" value is set 1`] = `
<div
  class="css-view-g5y9jx"
  id="nativeID"
/>
`;

exports[`components/View prop "pointerEvents" 1`] = `
<div
  class="css-view-g5y9jx r-pointerEvents-ah5dr5"
/>
`;

exports[`components/View prop "role" value alters HTML element 1`] = `
<article
  class="css-view-g5y9jx"
  role="article"
/>
`;

exports[`components/View prop "role" value is "button" 1`] = `
<button
  class="css-view-g5y9jx"
  role="button"
  type="button"
/>
`;

exports[`components/View prop "role" value is set 1`] = `
<div
  class="css-view-g5y9jx"
  role="presentation"
/>
`;

exports[`components/View prop "style" value is set 1`] = `
<div
  class="css-view-g5y9jx"
  style="border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px;"
/>
`;

exports[`components/View prop "testID" value is set 1`] = `
<div
  class="css-view-g5y9jx"
  data-testid="123"
/>
`;
